spacing issues on index

--- a/public/css/homepagestyle.css
+++ b/public/css/homepagestyle.css
@@ -31,7 +31,7 @@ body p{
 	width:82%;
 	margin:auto;
 	overflow:hidden;
-	padding-top: 10px;
+	padding-top: 0px;
 }
  ul{
 	margin:0;
